--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "private": true,
   "description": "A Strapi application",
   "scripts": {
+    "build": "strapi build",
     "deploy": "strapi deploy",
     "develop": "strapi develop",
     "start": "strapi start",
-    "strapi": "strapi",
-    "build": "babel src -d lib",
-    "prebuild": "jest"
+    "strapi": "strapi"
   },
   "dependencies": {
     "@strapi/plugin-cloud": "5.8.0",
