--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "typescript": "^5"
   },
   "engines": {
-    "node": ">=18.0.0 <=22.x.x",
-    "npm": ">=6.0.0"
+    "node": "20.x",
+    "npm": "8.x"
   },
   "strapi": {
     "uuid": "75e90d48-eecd-4903-8bdf-f3fcd751ad2a"
