--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "description": "A Strapi application",
   "scripts": {
+    "start": "NODE_ENV=production strapi start",
     "build": "strapi build",
     "deploy": "strapi deploy",
     "develop": "strapi develop",
-    "start": "strapi start",
     "strapi": "strapi"
   },
   "dependencies": {
