--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "styled-components": "^6.0.0"
   },
   "devDependencies": {
+    "@strapi/typescript-utils": "^5.8.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
